# measurely

./: .gitignore  .gitignore.backup  BRANDING.md  COPYRIGHT  LICENSE  NONCOMMERCIAL.md  README.md  REDISTRIBUTION.md  how wlan1  index.js  install.sh  latest  manifest.json  measurely-ap.sh  measurely_analyse.py  measurely_connect.py  measurely_gui.py  measurely_main.py  measurely_sweep.py  pyproject.toml  regenerate_report_curve.py  requirements.txt  room.json  test.py  wifi-toggle.sh
config/: dnsmasq.conf  hostapd.conf
docs/: CNAME  index.html
measurely/: analyse.py  error.txt  main.py  score.py  server.py  server_integrated.py  signal.py  speaker.py  sweep.py  util_io.py
measurely.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
measurelyapp/: __init__.py  acoustics.py  ai_analysis.py  analyse.py  history.py  io.py  led_status.py  score.py  server.py  server.py.backup  signal_math.py  speaker.py  sweep.py  update_led_state.py  writer.py
measurements/: debug.txt  latest  measurements  sweephistory.json
onboard/: ap.py  ap.py.backup  setup_ap.py
samba/: measurely.conf
scripts/: measurely-analyse  measurely-hotspot.sh  measurely-main  measurely-onboarding.sh  measurely-server  measurely-sweep  test_ai_analysis.py
speakers/: speakers.json
systemd/: measurely-onboarding.service  measurely.service
web/: analysis.html  index-old.html  index.html  index.html.backup2  measurely-dashboard.html  measurely.css  measurements  myroom.html  onboarding.html  recommendations.html  report-template.html  results.html  room-character.html  room-setup.html  (+5 more)
(+91 files in other folders)
