[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "measurely"
version = "0.1.0"
description = "Headache-proof room-acoustics analyser"
dependencies = [
    "numpy",
    "scipy",
    "soundfile",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["measurely*"]
